fix text overflow

--- a/client/src/css/ProductDetail.module.css
+++ b/client/src/css/ProductDetail.module.css
@@ -84,9 +84,11 @@
 }
 .product-detail-content-paragraph {
   width: 100%;
-  height: 120px;
+  height: 130px;
   font-size: 16px;
   color: #6b7280;
+  overflow: hidden;
+  overflow-wrap: break-word;
 }
 .product-detail-btn-group {
   display: flex;
